<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="20dp"
        android:textColor="#0A600A" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/crear_grafico01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_grafico_1"
            android:textSize="22sp"
            android:textColor="#14539F"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/crear_figuras_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_grafico_2"
            android:textSize="22sp"
            android:textColor="#14539F"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/crear_figuras_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_grafico_3"
            android:textSize="22sp"
            android:textColor="#14539F"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/crear_curvas01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_grafico_4"
            android:textSize="22sp"
            android:textColor="#14539F"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/crear_mediaonda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_grafico_5"
            android:textSize="22sp"
            android:textColor="#14539F"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>